:recycle: refactor : 숙소 조회 이력 저장 Redis sorted set으로 변경